--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "npm run build"
+    "build": "npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
